--- a/src/LBF/AdminBundle/Resources/views/Admin/recipes.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/recipes.html.twig
@@ -100,7 +100,7 @@
 					                            </td>
 					                            <td class="center">
 					                            	{% if recipe.element|length > 0 %}
-					                            		{{ recipe.element.name }}
+					                            		{{ recipe.element.nameFr }}
 					                            	{% else %}
 					                            		---
 					                            	{% endif %}
