--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -123,11 +123,11 @@
 		 	{{ 'footer.content.clientService' | trans }}
 		 	<br/>
 		 	<a href="">
-		 		+51 4 50 30 40 30
+		 		+51 984 06 06 20
 		 	</a>
-		 	<div class="center">
+		 	<!-- <div class="center">
 			 	<img alt="Payment" src="{{ asset('img/system/icons/payment.png') }}" class="icon_presentation_footer"/>
-		 	</div>
+		 	</div> -->
 		</div>
 	</div>
 	<div class="row left border_white_top multiple_list footer_part footer_bottom">
