--- a/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
@@ -18,6 +18,17 @@
 			<div class="section section_login section_padding" id="cartSection">
 				<br/><br/>
 
+				{% set current_language = '' %}
+		        {% if (app.request.get('_route_params')) != null %}
+		          {% if (app.request.get('_route_params')._locale == 'fr') %}
+		            {% set current_language = 'fr' %}
+		          {% elseif (app.request.get('_route_params')._locale == 'en') %}
+		            {% set current_language = 'en' %}
+		          {% else %}
+		            {% set current_language = 'es' %}
+		          {% endif %}
+		        {% endif %}
+
 				<script type="text/javascript">
 					// script for the login - Loaded in advance to avoid ajax problems
                   function showRegisterSelect() {
@@ -319,7 +330,21 @@
 		                            {% set qty = item_array['qty'] %}
 		                            <tr>
 		                              <th>
-		                                {{ item.name }}
+		                              	{% if current_language %}
+											{% if current_language == 'fr' and item.nameFr|length > 0 %}
+												{{ item.nameFr }}
+											{% elseif current_language == 'en' and item.nameEn|length > 0 %}
+												{{ item.nameEn }}
+											{% else %}
+												{{ item.nameEs }}
+											{% endif %}
+										{% else %}
+											{{ item.nameEs }}
+										{% endif %}
+										{% if item.naturalProduct == true %} 
+											* 
+											{% set naturalProductDef = true %}
+										{% endif %} 
 		                              </th>
 		                              <td class="center">
 		                              	<div id="counter_value_{{ item.type }}">
